src/components/Header/Header.css
* {
    margin: 0
}

.header {
    background-color: #0b0b0b;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    max-width: 100vw;
}

.title_with_image {
    max-width: 80vw;
    display: flex;
    flex-direction: row;
    align-items: stretch;
}

.main_heading {
    color: #F5CB11;
    padding: 2rem 0rem 0rem 0rem;
    font-size: 3rem;
    text-align: center;
}

.header img {
    max-width: 35vw;
    margin: auto;
    margin-top: 2rem;
}

.intro_text {
    color: white;
    padding: 1rem 2rem;
    font-size: 1.2rem;
    text-align: center;
}

/* For tablets  */

@media only screen and (min-width: 768px) {

    .title_with_image {
        display: inline-flex;
        padding: 1rem 2rem 0 2rem;
        align-items: center;
    }

    .main_heading {
        font-size: 4rem;
    }

    .header img {
        max-width: 30vw;
    }

    .intro_text {
        font-size: 1.6rem;
    }

}

/* For Desktop  */

@media only screen and (min-width: 1200px) {

    .title_with_image {
        padding-top: 0;
    }
    .main_heading {
        font-size: 6rem;

    }

    .header img {
        max-width: 15vw;
    }

    .intro_text {
        font-size: 1.6rem;
    }

}

